syntax = "proto3";

message FullUpdate {
    string fromer = 3;
    repeated Mapping mappings = 1;
}

message Mapping {
    string name = 1;
    repeated string ids = 2;
    repeated uint64 ids_epoch = 4;
    repeated string deleted = 3;
    repeated uint64 del_epoch = 5;
}